<resources>
    <string name="app_name">CTP Puriscal</string>
    <string name="action_settings">Mas información nanejialu@gmail.com</string>
	<string name="llamada1">Llamar</string>
    <string name="infoMapa">Pulsa en el mapa para conocer la dirección</string>
    <string name="infoTelefono">Pulsa en el teléfono para realizar una llamada</string>
    <string name="infoMail">Pulsa en el mensaje para enviar un correo electrónico</string>
	<string name="infoconfiguracion">Bienvenido, deslice su dedo sobre la barra para aumentar o disminuir el tamaño del texto, pulse en el disquete para conservar los cambios; si desea restaurar por defecto el texto pulse en el icono de color rojo 
	</string>
	<string name="direccion">Dirección</string>
	<string name="infodireccion">\nEstamos ubicados 300 metros oeste del plantel del Miniterio de Obras Públicas de Puriscal.\n</string>
	<string name="telefono">\nTeléfono\n</string>
	<string name="numTelefono">\n24 - 16 - 84 - 44\n</string>
	<string name="correo">\nCorreo Electrónico</string>
	<string name="correoctp">\ntecnicanocturnapuriscal@gmail.com\n</string>
	<string name="requisitos">Requisitos</string>
	<string name="listarequisitos">
	    \t· Fotocopia cédula de identidad.\n
	    \t· Póliza estudiantil.\n
	    \t· Original y copia de título de bachiller o nota de quinto año aprobado.\n
	    \t· Llenar boleta de matrícula.\n
	    \t· Cancelar cuota voluntaria de matrícula.\n
        \t· Adquirir cuaderno de comunicaciones y normativa de la institución .\n
	</string>
    <string name="beneficios">Beneficios</string>
    <string name="listabeneficios">
        \t· Estudios gratuitos.\n
        \t· Becas.\n
        \t· Transporte — comedor — IMAS.\n
        \t· Título de Técnico Medio.\n
        \t· Colocación en Empresas.\n
        \t· Laboratorios Informáticos para todas las especialidades.\n
    </string>
    <string name="horario">Horario</string>
    <string name="listahorario">
         6:00 – 10 :00 p.m. de Lunes a Viernes
    </string>
    <string name="acerca">\nAcerca de la Aplicación\n</string>
	<string name="elaborada">\nElaborada por Carlos Castro Brenes\n</string>
	<string name="masinfo">\nMás Información\n</string>
	<string name="correoinfo">\nnanejialu@gmail.com\n</string>
	<string name="ejemplotitulo">Ejemplo Texto Título</string>
	<string name="ejemplosubtitulo">Ejemplo Texto Subtítulo</string>
	<string name="ejemploinfo">Ejemplo Texto Información</string>
	<string name="introduccion">Introducción</string>
	<string name="cualidades">Cualidades que debo tener:</string>
	<string name="graduado">Perfil profesional del graduado</string>
	<string name="laborar">¿Dónde puedo trabajar?</string>
	<string name="plan">Plan de Estudios</string>
	<string name="primeranio">Primer año</string>
	<string name="segundoanio">Segundo año</string>
	<string name="terceranio">Tercer año</string>
	<string name="introbf">\tSomos una especialidad técnica que ofrecemos un perfil profesional dando una mejor calidad de vida.\n</string>
	<string name="requisitosbf">
	    \t· Conocimientos básicos de inglés.\n
	    \t· Trabajo en Equipo.\n
	    \t· Liderazgo.\n
	    \t· Motivación.\n
	</string>
	<string name="perfilbf">
	    \t- Utilizan conocimientos en las finanzas y la contabilidad.\n
	    \t- Aplican el análisis financiero en su profesión.\n
	    \t- Toma de decisiones administrativas.\n
	    \t- Trabajo en equipo con habilidad y eficiencia.\n
	    \t- Planea, organiza, dirige y controla su trabajo.\n
	    \t- Con calidad por iniciativa propia o por instrucciones de sus superiores.\n
	</string>
	<string name="trabajobf">
	    \t- Bancos.\n
		\t- Empresas Financieras.\n
		\t- Multinacionales.\n 
		\t- Empresas Públicas.\n 
		\t- Negocios Propios.\n
	</string>
	<string name="materiasdecibf">
	     \t- Finanzas Empresariales.\n 
		 \t- Contabilidad.\n
		 \t- Matemática Financiera.\n
		 \t- Tecnología de Información y Comunicación.\n
		 \t- English for Communication.\n  
	</string>
	<string name="materiasundebf">
	    \t- Decisiones Financieras.\n
		\t- Banca y Mercados Financieros.\n 
		\t- Plataformas de Servicios.\n
		\t- English for Communication.\n
        \t- Pasantía.\n
	</string>
	<string name="materiasduobf">
	    \t- Banca y Mercados Financieros.\n
		\t- Plataformas de Servicios.\n 
		\t- Legislación y Normativa.\n 
		\t- English for Communication.\n
        \t- Práctica Profesional Supervisada.\n
	</string>
	<string name="introco">\tSomos una especialidad técnica que ofrecemos además de un perfil profesional, un ambiente agradable de trabajo en equipo con gran calidad humana.\n</string>
	<string name="requisitosco">
		\t· Actitud Positiva.\n
		\t· Trabajo en Equipo.\n
		\t· Integridad, todo Contador se destaca por su honradez.\n
		\t· Disciplina y aspiraciones, la persona que desee surgir y cumplir todos sus propósitos.\n
		\t· Habilidad para Expresarse.\n 
		\t· Capacidad para detectar y analizar problemas.\n
	</string>
	<string name="perfilco">
	
		\t- Diagnosticar, fundamentar, sugerir y tomar decisiones administrativas, contables y financieras.\n
		\t- Actuar con independencia mental.\n
		\t- Registrar el origen y aplicación de los recursos de una transacción.\n
		\t- Trabajo en equipo de manera disciplinada, habilidad y eficiencia.\n
		\t- Aplica normas de salud ocupacional y ética profesional.\n
		\t- Compromiso y responsabilidad.\n
		\t- Visión de objetivos y estrategias de una organización.\n 
		\t- Aplicacion de las N.I.C. (Normas Internacionales de Contabilidad).\n
		    
	    
	</string>
	<string name="trabajoco">
	    \t- Autónomo (Trabajar por cuenta propia).\n
		\t- Sector Público.\n
		\t- Sector Privado.\n
		\t- Docencia.\n
		\t- Entre Otros.\n
	</string>
	<string name="materiasdecico">
		\t- Tecnología Aplicada a la Contabilidad.\n
		\t- Administración de Organizaciones Modernas.\n
		\t- Matemática Financiera.\n
		\t- English for Communication.\n
	</string>
	<string name="materiasundeco">
		\t- Contabilidad.\n 
		\t- Gestión Empresarial.\n
		\t- Normativa Legal Contable.\n
		\t- Contabilidad de Costos.\n
		\t- English for Communication.\n
        \t- Pasantía.\n
	</string>
	<string name="materiasduoco">
		\t- Contabilidad.\n
		\t- Gestión Empresarial.\n
		\t- Princípios de Auditoría y Control Interno.\n
		\t- Presupueso y Estadística.\n
		\t- English for Communication.\n
        \t- Pasantía.\n
	</string>
	<string name="introeje">
		\tSomos una especialidad técnica que te ofrece además de un perfil profesional, un ambiente agradable con calidad humana.\n	    
	</string>
	<string name="requisitoseje">
	 	\t· Actitud Positiva.\n
		\t· Conocimientos básicos de idioma inglés.\n
		\t· Habilidades básicas en el manejo de la computadora y los paquetes de cómputo actualizados.\n
		\t· Facilidad para comunicarse en forma efectiva.\n
		\t· Trabajo en Equipo.\n
	</string>
	<string name="perfileje">
		\t- Utiliza al máximo los adelantos tecnológicos para el desarrollo de su labor.\n
		\t- Aplica las normas ocupacionales y éticas en el desarrollo de su profesión.\n
		\t- Toma de decisiones acertadas y oportunas en el proceso administrtivo.\n
		\t- Trabaja en equipo con habilidad y eficiencia.\n
		\t- Aplica los conocimientos del idioma inglés como su segunda lengua, en el desarrollo de su profesión.\n
		\t- Adapta su personalidad a las distintas situaciones laborales generadas por los continuos cambios en las técnicas, organización laboral y demás aspectos relacionados con la profesión.\n
		\t- Planea, organiza y ejecuta su trabajo con caludad por iniciativa propia o por instrucciones de superiores.\n

	    
	</string>
	<string name="trabajoeje">
		\t- Plataforma de Servicios (Bancos, Empresas Multinacionales).\n
		\t- Sector Público.\n
		\t- Sector Privado.\n
		\t- Empresas del Sector Turístico.\n
		\t- Call Center.\n
		\t- Empresa Propia\n
	</string>
	<string name="materiasdecieje">
		\t- Gestión Empresarial.\n 
		\t- Destrezas Computacionales.\n
		\t- Oral Communication in English.\n
		\t- Written Communication in English.\n
	</string>
	<string name="materiasundeeje">
		\t- Comunicación Empresarial.\n
		\t- Destrezas Computacionales.\n
		\t- Oral Communication in English.\n
		\t- Administración para Centros de Servicios.\n
        \t- Pasantía.\n
	</string>
	<string name="materiasduoeje">
		\t- Comunicación Empresarial.\n
		\t- Destrezas Computacionales.\n
		\t- Translation and Interpreting.\n
		\t- Administración para Centros de Servicios.\n
		\t- Oral Communication in English.\n
        \t- Práctica Profesional Supervisada.\n
	</string>
	<string name="introinfe">
		\tLa especialidad de Informática Empresarial te introduce en un mundo en el cual usted podrá conocer
		y dominar el mundo de la Informática iniciandote con el conocimiento de los principales avances tecnológicos, además te llevara
		dentro del mundo de la programación, Interfaces Gráficas, Tecnologías de Información y Comunicación, Sistemas Operativos así como
		el conocimiento de los sistemas de redes de computadoras, sin olvidar que el aprendizaje del inglés es un punto importante en el actual ambiente laboral.\n
		\tEs así como nuestra especialidad pretende permitir que el estudiante conozca las características, principios y desempeño de un mundo tan complejo como lo es la infromática.\n
						   	    
	</string>
	<string name="requisitosinfe">
	 	\t· Actitud Positiva.\n
		\t· Trabajo en Equipo.\n
	</string>
	<string name="perfilinfe">
		\tEl Técnico Medio en Informática Empresarial es muy cotizado en la actualidad y la mayoría de las empresas está requiriendolo.
		Por ello nuestro cuadro curricular responde a las necesidades del mercado laboral, que se detentan año con año.\n
		\tNuestros egresados son apreciado por empresas y logran encontrar trabajo sin mayor problema, por lo que puede insertarse al mercado laboral rápidamente.\n
	    
	</string>
	<string name="trabajoinfe">
		\t- Empresa propia.\n
		\t- Empresa con área en desarrollo de Software.\n
		\t- Empresa con área de Mantenimiento de Equipos y Redes de computadoras.\n
		\t- Puesto Administrativo.\n
		\t- Soporte de Aplicaciones.\n
	</string>
	<string name="materiasdeciinfe">
		\t- Mantenimiento de Equipo de Cómputo.\n
		\t- Tecnologías de Información y Comunicación.\n 
		\t- Programación.\n
		\t- Entorno Administrativo Informático.\n
		\t- English for Communication.\n

	</string>
	<string name="materiasundeinfe">
		\t- Mantenimiento de Equipo de Cómputo.\n
		\t- Interfaces Gráficas de Usuario.\n
		\t- Programación.\n
		\t- Entorno Administrativo Informático.\n
		\t- English for Communication.\n
        \t- Pasantía.\n
	</string>
	<string name="materiasduoinfe">
		\t- Redes de Computadoras.\n 
		\t- Sistemas Operativos.\n
		\t- Entorno Administrativo Informático.\n 
		\t- English for Communication.\n
        \t- Práctica Profesional Supervisada.\n
	</string>
	<string name="introinfr">
		\tLa especialidad de Informática Empresarial te introduce a un mundo en el cual usted podrá conocer
		y dominar el mundo de la Informática iniciandote con el conocimiento de los principales avances tecnológicos, además te llevara
		dentro del mundo de la programación, Interfaces Gráficas, Tenologías de Información y Comunicación, Sistemas Operativos así como
		el conocimiento de los sistemas de redes de computadoras, sin olvidar que el aprendizaje del inglés es un punto importante en el actual ambiente laboral.\n
		\tEs así como nuestra especialidad pretende permitir que el estudiante conozca las características, principios y desempeño de un mundo tan complejo como lo es la infromática.\n
						   	    
	</string>
	<string name="requisitosinfr">
	 	\t· Actitud Positiva.\n
		\t· Trabajo en Equipo.\n
	</string>
</resources>