<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:background="@color/crema"
    android:padding="@dimen/distancia"
    android:gravity="center">
	
	<LinearLayout
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_vertical">
		
		
		<TextView
			android:id="@+id/titelefono"
			style="@style/Titulo" 	
			android:text="@string/telefono"
			android:layout_gravity="center_horizontal" />
		
		<TextView
			android:id="@+id/infotelefono"
			android:text="@string/numTelefono"
			style="@style/Informacion" 
			android:layout_gravity="center_horizontal" />
		
		
		<ImageButton
			android:id="@+id/imagenllamada"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_gravity="center_horizontal" 
			android:background="@drawable/iconollamada" />

        <TextView
            style="@style/Informacion"
            android:text="@string/infoTelefono"
            android:textSize="12dp"
            android:layout_gravity="center_horizontal" />
		
		<TextView
			android:id="@+id/ticorreo"
			android:text="@string/correo"
			style="@style/Titulo" 
			android:gravity="center"
			android:layout_gravity="center_horizontal" />


		
		<TextView
			android:id="@+id/infocorreo"
			style="@style/Informacion" 
			android:text="@string/correoctp"
			android:gravity="center"
			android:layout_gravity="center_horizontal"  />
		

		
		<ImageButton
			android:id="@+id/imagencorreo"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_gravity="center_horizontal" 
			android:background="@drawable/iconomail" />

        <TextView
            style="@style/Informacion"
            android:text="@string/infoMail"
            android:textSize="12dp"
            android:layout_gravity="center_horizontal" />
	
	</LinearLayout>
	
</ScrollView>
